infrastructure/base/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
spec: &spec
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx-nginx-ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-controller-v6
  namespace: nginx
  annotations:
    # See frontend-config.yaml.
    networking.gke.io/v1beta1.FrontendConfig: nginx-controller
spec: *spec
